2005-07-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/layout/layoutgroup.cc:
	* glom/data_structure/layout/layoutgroup.h: add_item(): 
	Return a pointer to the added item.
	* glom/navigation/box_tables.cc: on_adddel_Add(): Add 
	a description and comments field as well as an ID field 
	when creating new tables.

2005-07-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/treestore_layout.cc: Prevent items from being 
	dragged directly under themselves, preventing a crash.

2005-07-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: get_suitable_width()
	* glom/utility_widgets/datawidget.cc: constructor:
	Give images the same width as text fields, with an equal height, 
	so they line up more, though this might be too big.

2005-07-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/imageglom.cc: Do not crash when reading bad 
	image data from the database.

0.8.34:

2005-07-15  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_smallbusiness.cc: Contacts table: Made the ID 
	autoincrement again and added choice for Title. This got lost 
	somehow. Changed database name again to avoid clash with already-
	created examples.
	* glom/utility_widgets/imageglom.cc:
	* glom/utility_widgets/imageglom.h: Added a Clear context menu item.

2005-07-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: Comment out the debug query output on 
	stdout, because it slows us down when we use lots of image data.
	* glom/data_structure/glomconversions.cc: Tried to use 
	PQescapeBytea() instead of my custom (slow) encoding code, without 
	success, so left that code commented-out.
	* glom/utility_widgets/imageglom.cc:
	* glom/utility_widgets/imageglom.h: Implemented copy/paste.

2005-07-14  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc:on_flowtable_field_edited():
	Special case to avoid calling set_value() with a _correct_ 